Fixed note group and delete icon alignment issue

--- a/src/sass/Notes.sass
+++ b/src/sass/Notes.sass
@@ -10,3 +10,7 @@
         height: 100%
         &.is-2
           border-right: 2px solid $grey-lightest
+
+      .note-group
+          display: flex
+          align-items: center
